# guardsarm

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  ATTRIBUTION.md  BUGS  CHANGELOG.md  CONFIG  CONTRIBUTORS  Dockerfile.gsagent  Dockerfile.gsagent-2.0.0  Dockerfile.gsagent-gm  Dockerfile.gsmgr  Dockerfile.gsmgr-2.0.0  Dockerfile.gsmgr-debug  Dockerfile.gsmgr-final  Dockerfile.gsmgr-final-2.0.0  Dockerfile.gsmgr-final-gm  Dockerfile.gsmgr-rebrand-run  INSTALL  LICENSE  NOTICE  README.md  SECURITY.md  VERSION.json  activate_routes.py  branding.json  gs-bootstrap-indexer.sh  gs-dls-regression.py  install.sh  shared-agent.conf  upgrade.sh
src/: CMakeLists.txt  Doxyfile  Makefile  Readme.md  build.py
src/active-response/: CMakeLists.txt
src/active-response/include/: active_responses.h
src/active-response/src/: active_responses.c  block-domain.c  block-hash.c  block-ip-macos.c  block-ip-unix.c  block-ip-windows.c  collect-forensic.c  disable-account.c  isolate.c  kill-process.c  quarantine-file.c  remove-persistence.c  repair-network.c  tamper-guard.c
src/active-response/tests/: README.md  isolation-vmtest.ps1
src/addagent/: CMakeLists.txt
src/addagent/include/: manage_agents.h
src/addagent/src/: main.c  manage_agents.c  manage_keys.c  read_from_user.c
src/ci/: build_tools.py  run_check.py  utils.py
src/ci/input/: rtr_input.json  test_tool_config.json
src/ci/tests/: conftest.py
src/client-agent/: CMakeLists.txt
src/client-agent/include/: agentd.h  state.h
src/client-agent/src/: agcom.c  agentd.c  buffer.c  config.c  control.c  event-forward.c  main.c  notify.c  receiver.c  reload_agent.c  request.c  rotate_log.c  sendmsg.c  sendmsg.h  start_agent.c  startup_gate.c  state.c
src/cmake/: GuardSarmRpath.cmake
src/config/: CMakeLists.txt  README.md
src/config/include/: authd-config.h  client-config.h  config.h  global-config.h  guardsarm_db-config.h  indexer-config.h  localfile-config.h  remote-config.h  rootcheck-config.h  syscheck-config.h
src/config/src/: authd-config.c  buffer-config.c  client-config.c  config.c  global-config.c  guardsarm_db-config.c  indexer-config.c  localfile-config.c  remote-config.c  rootcheck-config.c  socket-config.c  syscheck-config.c  wmodules-agent-upgrade.c  wmodules-aws.c  wmodules-azure.c  wmodules-command.c  wmodules-config.c  wmodules-docker.c  wmodules-edr.c  wmodules-gcp.c  wmodules-github.c  wmodules-ms-graph.c  wmodules-office365.c  wmodules-sca.c  wmodules-syscollector.c  wmodules-task-manager.c  wmodules-vulnerability-detection.c
src/data_provider/: CMakeLists.txt
src/data_provider/include/: sysInfo.h  sysInfo.hpp  sysInfoInterface.h
src/data_provider/src/: UtilsWrapperUnix.cpp  UtilsWrapperUnix.hpp  procpsWrapperLinux.cpp  procpsWrapperLinux.hpp  sharedDefs.h  sysInfo.cpp  sysInfoCommonBSD.cpp  sysInfoFreeBSD.cpp  sysInfoLinux.cpp  sysInfoMac.cpp  sysInfoOpenBSD.cpp  sysInfoUnix.cpp  sysInfoWin.cpp  utilsWrapperLinux.cpp  utilsWrapperLinux.hpp  utilsWrapperMac.cpp  utilsWrapperMac.hpp  utilsWrapperWin.cpp  utilsWrapperWin.hpp
src/data_provider/tests/: CMakeLists.txt
src/data_provider/testtool/: CMakeLists.txt  Readme.md  cmdLineActions.h  main.cpp
src/engine/: CMakeLists.txt
src/engine/internal_packages/: build.sh  generate_package.sh  test_package.sh
src/engine/source/: README.md  main.cpp
src/engine/standalone/: README.md  docker-entrypoint.sh  generate_package.sh  run_engine.sh
src/engine/test/: README.md  setupEnvironment.py
src/engine/tools/: README.md  compare_expected.py  download_mmdbs.sh  http_bypass.go  update_expected.py  write_message.go
src/guardsarm_db/: CMakeLists.txt
src/guardsarm_db/include/: wdb.h  wdb_pool.h
src/guardsarm_db/schemas/: schema_global.sql  schema_task_manager.sql
src/guardsarm_db/src/: main.c  wdb.c  wdb_com.c  wdb_global.c  wdb_metadata.c  wdb_parser.c  wdb_pool.c  wdb_state.c  wdb_state.h  wdb_task.c  wdb_upgrade.c
src/guardsarm_modules/: CMakeLists.txt
src/guardsarm_modules/agent_info/: CMakeLists.txt
src/guardsarm_modules/include/: wmodules.h  wmodules_def.h
src/guardsarm_modules/inventory_sync/: CMakeLists.txt
src/guardsarm_modules/sca/: CMakeLists.txt
src/guardsarm_modules/src/: main.c  module_query_errors.h  wm_agent_info.c  wm_agent_info.h  wm_aws.c  wm_aws.h  wm_azure.c  wm_azure.h  wm_command.c  wm_command.h  wm_content_manager.c  wm_content_manager.h  wm_control.c  wm_control.h  wm_database.c  wm_database.h  wm_docker.c  wm_docker.h  wm_edr.c  wm_edr.h  wm_exec.c  wm_gcp.c  wm_gcp.h  wm_github.c  wm_github.h  wm_inventory_sync.c  wm_inventory_sync.h  wm_ms_graph.c  wm_ms_graph.h  wm_office365.c  wm_office365.h  wm_router.c  wm_router.h  wm_sca.c  wm_sca.h  wm_syscollector.c  wm_syscollector.h  wm_task_general.c  wm_task_general.h  wm_vulnerability_scanner.c  (+3 more)
src/init/: add_localfiles.sh  adduser.sh  branding.sh  darwin-addusers.sh  darwin-init.sh  dist-detect.sh  functions.sh  gen_guardsarm.sh  guardsarm-client.sh  guardsarm-server.sh  init.sh  inst-functions.sh  language.sh  pkg_installer.sh  register_configure_agent.sh  replace_manager_ip.sh  shared.sh  template-select.sh  update.sh
src/logcollector/: CMakeLists.txt
src/monitord/: CMakeLists.txt
src/os_auth/: CMakeLists.txt
src/os_execd/: CMakeLists.txt
src/remoted/: CMakeLists.txt
src/rootcheck/: CMakeLists.txt
src/selinux/: guardsarm.te
src/shared/: CMakeLists.txt
src/syscheckd/: CMakeLists.txt
src/unit_tests/: CMakeLists.txt  Readme.md  agent.cmake  server.cmake  winagent.cmake
src/util/: CMakeLists.txt
src/win32/: CMakeLists.txt  GuardSarmUI.wxl  InstallerScripts.vbs  RemoveAllScript.vbs  block-ip.exe.manifest  do_upgrade.ps1  doc.html  gsmsec.conf  guardsarm-agent-eventchannel.exe.manifest  guardsarm-agent-eventchannel.rc  guardsarm-agent.exe.manifest  guardsarm-agent.rc  guardsarm-installer-build-msi.bat  guardsarm-installer.wxs  help.txt  license.rtf  os_win.h  ossec.conf  setup-iis.c  setup-shared.c  setup-shared.h  setup-syscheck.c  setup-win.c  unix2dos.pl  upgrade.bat  version.rc  win_agent.c  win_service.c  win_stubs.c  win_utils.c
(+3313 files in other folders)
